# api

./: .env  .gitignore  Dockerfile  Pipfile  README.md  boot.sh  pyproject.toml  requirements.txt  sql_app.db
app/: Pipfile  alembic.ini  app.py  config.py  main.py  models.py  oauth2.py  prestart.sh  pyproject.toml  requirements.txt  server.py
app/alembic/: env.py
app/alembic/versions/: b67aba8ba48c_init.py  dd6699904443_add_otp_table.py
app/alembic/versions_old/: 254d6af91809_add_otp_code_table.py  3a86b5d2e473_add_oauth_tables.py  75b5158dc721_initial_migration.py
app/api/: __init__.py  deps.py
app/api/auth/: sequences.py
app/api/authenticate/: fido2.py  login.py  username.py
app/api/authentication/: api.py  fido2.py  init.py  mail.py  otpsms.py  tokenexchange.py  username.py
app/api/credentials/: api.py  fido2.py
app/api/fido2/: routes.py
app/api/oauth2/: api.py  clients_crud.py  oauth2.py
app/api/register/: fido2.py
app/api/users/: __init__.py  api.py  users_confirm.py  users_crud.py  users_register_fido2.py  users_verify.py
app/api/v1/: api.py
app/api/v1/auth/: __init__.py  (+7 more)
app/core/: config.py  responses.py  security.py
app/crud/: __init__.py  credential.py  otp.py  user.py
app/database/: models.py
app/db/: base.py  session.py
app/libs/: user.py
app/models/: __init__.py  credential.py  models.py  models.py.old  otp.py  user.py
app/schemas/: __init__.py  credential.py  otp.py  token.py  user.py
app/static/: authenticate.html  register.html
app/templates/: authorize.html  create_client.html  home.html
app/utils/: email.py
(+41 files in other folders)
